[package]
name = "RustExec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoincash-addr = "0.5.2"
clap = "4.4.7"
console = "0.15.7"
env_logger = "0.10.0"
failure = "0.1.8"
log = "0.4.20"
merkle-cbt = "0.3.2"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.108"
sha2 = "0.10.8"
sled = "0.34.7"
