[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
prost = "0.12.1"
rand = "0.8.5"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["net", "io-util", "sync", "time", "rt", "macros"] }
tracing = "0.1.40"
uuid = "1.5.0"
